# nova-subscription-manager

./: .dockerignore  .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/routes/: auth.py  panels.py  providers.py  subscriptions.py  users.py
backend/app/application/dto/: panel.py  provider.py  subscription.py  user.py
backend/app/application/services/: panel_service.py  provider_service.py  subscription_service.py  user_service.py
backend/app/core/: config.py  crypto.py  logging.py  panels.py
backend/app/db/: base.py  models.py  session.py
backend/app/domain/services/: merge_engine.py
backend/app/infrastructure/clients/: hiddify_client.py  panel_probe.py
backend/app/infrastructure/scheduler/: jobs.py  scheduler.py
backend/app/plugins/parsers/: base.py  default.py  registry.py
backend/app/security/: dependencies.py  jwt.py
backend/config/: panels.example.json
backend/tests/unit/: test_merge_engine.py  test_panel_headers.py  test_panel_probe.py  test_panel_service.py
docs/: architecture.md  hiddify-api-requirements.md  panel-setup.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
infra/nginx/: default.conf
infra/prometheus/: prometheus.yml
infra/scripts/: setup_panels.py
(+24 files in other folders)
